--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,29 @@
 {
 	"name": "mjolnir/database",
 	"version": "0.0",
-	"description": "Mjolnir database module",
-	"keywords": ["database"],
+	"description": "Database utilities and related structures.",
+	"keywords": [ ],
 	"homepage": "https://github.com/ibidem",
 	"type": "library",
 	"license": "BSD-2",
-	
+
 	"authors": [
 		{
 			"name": "srcspider",
 			"homepage": "https://github.com/srcspider"
 		}
 	],
-	
+
 	"require": {
-		"php": ">=5.4.0"
+		"php": ">=5.4.4"
 	},
-	
+
 	"autoload": {
 		"psr-0": {
 			"mjolnir\\database": "../.."
 		}
 	},
-	
+
 	"extra": {
 		"branch-alias": {
 			"dev-wip/v1.0": "1.0.x-dev"
